--- a/responsive.css
+++ b/responsive.css
@@ -327,7 +327,7 @@
         padding-left: 13px;
         background-color: white;
         color: var(--primary-color);
-        box-shadow: 0px 2px 15px -8px bla
+        box-shadow: 0px 2px 15px -8px grey;
     }
     .acctInfo button{
         background-color: white;
